fix election card on mobile

--- a/frontend/src/scss/new/special/council-elections.scss
+++ b/frontend/src/scss/new/special/council-elections.scss
@@ -32,3 +32,9 @@
 		margin: auto 0;
 	}
 }
+
+.special-election-tracker-container {
+	// padding: 0 var(--horizontal-indent);
+	display: flex;
+	flex: 0.7;
+}
